syntax = "proto3";

package v1api;

option go_package = "proto;v1api";

service V1api {
	rpc Generate(GenerateRequest) returns (GenerateResponse) {}
	rpc ListKeys(ListRequest) returns (ListResponse) {}
	rpc RevokeKey(RevokeRequest) returns (RevokeResponse) {}
	rpc UpdateAllowedPaths(UpdateAllowedPathsRequest) returns (UpdateAllowedPathsResponse) {}
}


message GenerateRequest {
	repeated string scopes = 1;
	string description = 2;
}

message GenerateResponse {
	string apiKey = 1;
}

message ListRequest {}

message ListResponse {
	repeated APIKey api_keys = 1;
}

message APIKey {
	string id = 1;
	string description = 2;
	int64 created_time = 3;
}

message RevokeRequest {
	string id = 1;
}

message RevokeResponse {}

message Event {
	RequestEvent request = 1;
	APIKeyCreateEvent api_key_create = 2;
}

message APIKeyCreateEvent {
	string user_id = 1;
	string api_key_id = 2;
	repeated string scopes = 3;
}

message RequestEvent {
	string user_id = 1;
	string api_key_id = 2;
	string url = 3;
}

message UpdateAllowedPathsRequest {
	string user_id = 1;
	string namespace = 2;
	repeated string allowed = 3;
	repeated string blocked = 4;
}

message UpdateAllowedPathsResponse {}